# graph_qc

./: .gitignore  README.md  pyproject.toml
cpp/: README.md
cpp/feiganbaum_polynomial/: Makefile  main.cpp
cpp/numerical_feigenbaum_constants/: clang-format-report  main.cpp  present_in_report.cpp  to_table.py
feigenbuam_conjecture/: cal.py
logistic_bifurcation/: main.py
logistic_vs_continous_modelling_population/: main.py
mathematica/: README.md
modeling_pop_with_diff_logistic_maps/: main.py
src/: utils.py
src/cal_feibengaum_constant/: main.py
src/demonstration_of_a_d/: main.py
src/feigenbuam_alpha/: main.py
src/feigenbuam_conjecture/: README.md  algorithm_demonstration.py  faster_sympy.py  notebook.py  snapshot.py
src/general_bifurcation/: main.py
src/graph_4_functions/: main.py
src/logistic_bifurcation/: main.py
src/logistic_log_scale/: main.py
src/logistic_map_different_lambda/: main.py
src/logistic_vs_continous_modelling_population/: main.py
src/modeling_pop_with_diff_logistic_maps/: main.py
src/point_of_bifurcation_illustration/: main.py
src/stable_point_demonstration/: main.py
stable_un_stable_iteration_demonstration/: main.py
