[project]
name = "graph-qc"
version = "0.1.0"
description = "Codes that produce figures for Quantifying Chaos report, final year mathematic group project at the University of Edinburgh."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "sympy>=1.13.3",
]

[tool.uv]
package = true

